# setup.cfg is representing the configuration of setup.py , this file is used to write extended configurations ,
#representing metadata
# All this can be found if you search tensorflow PypI and scroll down towards the left, look for setupcfgdata.png image
# hardcoded one to show metadata details of the package

[metadata]  # These are called tags
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
install_requires = 
    ensure==1.0.2
    py-youtube==1.1.7
python_requires = >=3.7

[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
MongoDB-Connect=py.typed

[flake8]
max-line-length = 160
exclude = __init__.py